--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npx": "^10.2.2",
