--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/cauradev/node-project-base#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.2",
+    "mongoose-paginate-v2": "^1.7.1",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npx": "^10.2.2",
