--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.6.2",
     "mongoose-paginate-v2": "^1.7.1",
     "mongoose-unique-validator": "^3.1.0",
