--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npx": "^10.2.2",
+    "randomstring": "^1.2.3",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.2"
   }
